--- a/src/page/Header/Header.css
+++ b/src/page/Header/Header.css
@@ -2,5 +2,5 @@
     width: 1080px;
     height: 400px;
     margin: 0 auto;
-    background: rgb(221, 191, 191);
+    /* background: rgb(221, 191, 191); */
 }
